--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "mongoose": "^7.4.4"
+    "formidable": "^3.5.1",
+    "mongoose": "^7.4.4",
+    "node": "^21.2.0"
   }
 }
